--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
             <form method="post">
             <input type="text" name="u" placeholder="Username" required="required" />
                 <input type="password" name="p" placeholder="Password" required="required" />
-                <button type="submit" class="btn btn-primary btn-block btn-large">Let me in
-                <a> href"https://tjk06.github.io/Home-Page/"</a></button>
+                <button type="submit" class="btn btn-primary btn-block btn-large">Let me in</button>
             </form>
         </div>  
 </body>
